--- a/hardware/hardware.tex
+++ b/hardware/hardware.tex
@@ -1,1 +1,7 @@
 \chapter{Hardware}
+
+\input{hardware/cortex}
+\input{hardware/research}
+\input{hardware/fpga}
+\input{hardware/mbed}
+\input{hardware/sensor}
