--- a/software/software.tex
+++ b/software/software.tex
@@ -1,1 +1,6 @@
 \chapter{Software}
+
+\input{software/exercise-detection}
+\input{software/machine-learning}
+\input{software/algorithm}
+\input{software/development}
