--- a/report.tex
+++ b/report.tex
@@ -66,9 +66,10 @@
 	\lstlistoflistings
 	\listofsymbols{ll}
 	{
-		$w$ & The weight vector \\
 		$S$ & The scale factor of a fixed-point number \\
 		$B$ & The number of bits to shift a fixed-point number \\
+		$L$ & A Layer in a MultiLayer Perceptron. Can be considered a set of nodes \\
+		$LAYERS$ & The set of all Layers in a MultiLayer Perceptron
 	}
 	%\acknowledgements{Thanks to no one.}
 	%\dedicatory{To \dots}
