Added Software Chapter intro text

--- a/software/software.tex
+++ b/software/software.tex
@@ -1,5 +1,7 @@
 \chapter{Software}
 
+This project required the creation of an algorithm powerful enough to accurately detect and classify subtle foot movements whilst small enough to fit into a small memory space and run in a sub threshold platform. This chapter analysises the tools and techniques used to develop such an algorithm, and discusses some of the tradeoffs and optimisations that were investigated.
+
 \input{software/exercise-detection}
 \input{software/machine-learning}
 \input{software/algorithm}
