Moved exercises into figures directory

--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -9,7 +9,7 @@ The particular problem we have been tasked to solve is a way to identify and mon
 
 \begin{figure}[h]
   \centering
-    \includegraphics[width=1.0\textwidth]{intro/exercises}
+    \includegraphics[width=1.0\textwidth]{figures/exercises}
   \caption{Inflight exercises \cite{virgin2015exercises}}
   \label{fig:exercises}
 \end{figure}
