Fixed incorrect captions on size figures

--- a/results/size.tex
+++ b/results/size.tex
@@ -39,14 +39,14 @@ The stack usage of each function alone is not enough to assure the stack usage o
 \begin{figure}[!h]
     \centering
     \includegraphics{figures/stack-calls.pdf}
-    \caption{Example MultiLayer Perceptron Network}
+    \caption{Graph of Function Calls}
     \label{fig:stack-calls}
 \end{figure}
 
 \begin{figure}[!h]
     \centering
     \includegraphics{figures/stack-routes.pdf}
-    \caption{Example MultiLayer Perceptron Network}
+    \caption{Routes through Function Call Graph}
     \label{fig:stack-routes}
 \end{figure}
 
