Fixed Todo notes showing offscreen

--- a/report.tex
+++ b/report.tex
@@ -24,6 +24,11 @@
 
 \newcommand{\note}[1]{\todo[inline]{#1}}
 
+% Fix for todo notes rendering incorrectly
+\reversemarginpar
+\setlength{\marginparwidth}{3.4cm}
+
+
 
 %% ----------------------------------------------------------------
 \begin{document}
