--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -14,7 +14,7 @@ The particular problem we have been tasked to solve is a way to identify and mon
   \label{fig:exercises}
 \end{figure}
 
-Figure ~\ref{fig:exercises} shows some of the inflight exercises which can be performed. We have focussed on a few of them including the revolver, the ballerina and the shrug. These involve rotating the feet in circles, pointing the feet up and down and rolling the shoulders backwards and forwards. These are all designed to help keep the circulation going in the limbs.
+Figure \ref{fig:exercises} shows some of the inflight exercises which can be performed. We have focussed on a few of them including the revolver, the ballerina and the shrug. These involve rotating the feet in circles, pointing the feet up and down and rolling the shoulders backwards and forwards. These are all designed to help keep the circulation going in the limbs.
 
 Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy efficient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul flight.
 
