Slightly modifies auto-baud

--- a/ECS.bib
+++ b/ECS.bib
@@ -126,3 +126,11 @@ C232HM datasheet
 	note = {Rev 1.1},
 	url = {http://www.ftdichip.com/Support/Documents/DataSheets/Cables/DS_C232HM_MPSSE_CABLE.PDF}
 }
+
+mBed thing claiming to be datasheet but isn't
+@MISC{mbed_not_datasheet,
+	author = {NXP},
+	year = {2014},
+	title = {Data Sheet for the {LPC11U2x}},
+	url = {http://www.nxp.com/documents/data_sheet/LPC11U2X.pdf}
+}
