--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -82,6 +82,10 @@ The next four bits contains a value for \verb|FREQSEL|, where a value within the
 
 With the available frequency values and divisors, it confirms the range the Watchdog oscillator achieves given earlier.
 
+\subsubsection{Analysing the error margin}
+
+It is known that the Watchdog oscillator has an error margin of $ \pm 40\%$, the actual impact this would have however is unknown. According to the data sheet \cite{mbed_not_datasheet}, 
+
 \subsection{Serial Communication}
 
 For the purposes of debugging, serial communication was used to extract information from the device and onto the host computer. To accomplish this, a C232HM cable \cite{c232hm_datasheet} was used to interface with the host computer, via USB, and the mBed, via Serial pins 9 and 10. The baud rate was left at the default value of 9600 and to test the communication, the mBed was programmed to send "Hello World!" to the host pc via Serial communication.
@@ -112,9 +116,9 @@ Within the mBed datasheet \cite{mbed_datasheet}, a methodology for calculating t
 
 \subsubsection{Auto-Baud}
 
-One possible method to account for this is a feature provided within the processor called Auto-Baud\cite{mbed_datasheet}. This is where the device waits on receiving communication upon its RX pin and of the data coming in, it measures the baud rate between a falling edge and a subsequent rising or falling edge dependant on the mode set within the registers.
+Another option to account for this is a feature provided within the processor called Auto-Baud\cite{mbed_datasheet}. This is where the device waits on receiving communication upon its RX pin and of the data coming in, it measures the baud rate between a falling edge and a subsequent rising or falling edge depending on the mode set within the registers.
 
-Using this information, the divisor registers are set accordingly allowing the Serial communication to communicate at the required baud rate. 
+Using this information, the required registers are set to enable Serial communication such that the device can communicate at the required baud rate. 
 
 \note{Limitations of mBed, e.g. hardware divide, floating point arithmetic}
 \note{Serial communication - autobaud, python script}
