Hardware - Creates Initial Design section and moves design to Initial Design

--- a/hardware/hardware.tex
+++ b/hardware/hardware.tex
@@ -1,8 +1,8 @@
 \chapter{Hardware}
 
+\input{hardware/initialdesign}
 \input{hardware/cortex}
 \input{hardware/research}
 \input{hardware/fpga}
 \input{hardware/mbed}
-\input{hardware/design}
 \input{hardware/sensor}
